--- a/Is It Prime/Is It Prime/Base.lproj/Main.storyboard
+++ b/Is It Prime/Is It Prime/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,51 +15,88 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Is_It_Prime" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAa-B1-gcq">
-                                <rect key="frame" x="139" y="229.5" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a positive whole number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIo-P1-YZ4">
+                                <rect key="frame" x="88.666666666666686" y="111" width="237" height="24"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68S-Jk-xKa">
-                                <rect key="frame" x="491" y="672" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is It Prime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VR3-je-c5d">
+                                <rect key="frame" x="147" y="48" width="120" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="7aH-eX-lzr"/>
+                                    <constraint firstAttribute="width" constant="120" id="wOJ-7J-QdU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EIo-P1-YZ4">
-                                <rect key="frame" x="139" y="92" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qRp-dj-B6E">
+                                <rect key="frame" x="20" y="194" width="374" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wAa-B1-gcq">
+                                <rect key="frame" x="20" y="379" width="374" height="0.0"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VR3-je-c5d">
-                                <rect key="frame" x="139" y="48" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="da9-lu-Q3H">
+                                <rect key="frame" x="20" y="284" width="374" height="30"/>
+                                <color key="backgroundColor" name="controlAccentColor" catalog="System" colorSpace="catalog"/>
+                                <state key="normal" title="Check Number">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="guessButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5hG-X0-euq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="qRp-dj-B6E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1Au-MU-qGh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qRp-dj-B6E" secondAttribute="trailing" constant="20" id="1Ku-Ix-yh1"/>
+                            <constraint firstItem="da9-lu-Q3H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Gi-bn-zmk"/>
                             <constraint firstItem="VR3-je-c5d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4wA-cY-AWG"/>
+                            <constraint firstItem="qRp-dj-B6E" firstAttribute="top" secondItem="EIo-P1-YZ4" secondAttribute="bottom" constant="59" id="61N-uu-DVJ"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DLJ-db-5bR"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FEF-Se-Q4v"/>
+                            <constraint firstItem="da9-lu-Q3H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="GzD-bB-gli"/>
+                            <constraint firstItem="da9-lu-Q3H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="JRv-tu-7bA"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q75-2k-p9O"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TQc-jt-qzD"/>
+                            <constraint firstItem="da9-lu-Q3H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Z44-vd-2pL"/>
+                            <constraint firstItem="qRp-dj-B6E" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZF8-mp-IKX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="da9-lu-Q3H" secondAttribute="trailing" constant="20" id="ZNr-56-8w0"/>
                             <constraint firstItem="VR3-je-c5d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bTL-58-d5h"/>
                             <constraint firstItem="EIo-P1-YZ4" firstAttribute="top" secondItem="VR3-je-c5d" secondAttribute="bottom" constant="23" id="bgV-H7-bUz"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="top" secondItem="da9-lu-Q3H" secondAttribute="bottom" constant="65" id="dKZ-ot-IiN"/>
                             <constraint firstItem="VR3-je-c5d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fwU-ts-BfE"/>
-                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qRP-2R-tBE"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gip-R3-sDA"/>
+                            <constraint firstItem="qRp-dj-B6E" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gkS-nI-74O"/>
+                            <constraint firstItem="da9-lu-Q3H" firstAttribute="top" secondItem="qRp-dj-B6E" secondAttribute="bottom" constant="60" id="m1h-aW-fta"/>
+                            <constraint firstItem="EIo-P1-YZ4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pQp-qV-Ayq"/>
                             <constraint firstItem="EIo-P1-YZ4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rAA-RD-pbH"/>
+                            <constraint firstItem="wAa-B1-gcq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="teX-fk-tcS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wAa-B1-gcq" secondAttribute="trailing" constant="20" id="uCm-Jl-ASu"/>
                             <constraint firstItem="wAa-B1-gcq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yet-hG-B3c"/>
                             <constraint firstItem="VR3-je-c5d" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="zRH-Gq-xoB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="answerLabel" destination="wAa-B1-gcq" id="USZ-L0-wLD"/>
+                        <outlet property="inputField" destination="qRp-dj-B6E" id="KRg-5o-AB0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="47.826086956521742" y="20.380434782608699"/>
         </scene>
     </scenes>
 </document>
