--- a/Todos/Todos/Base.lproj/Main.storyboard
+++ b/Todos/Todos/Base.lproj/Main.storyboard
@@ -97,9 +97,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8mV-js-PRS">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8mV-js-PRS">
                                 <rect key="frame" x="0.0" y="135" width="375" height="483"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="PFK-9J-dO6">
@@ -111,20 +110,31 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="8rJ-Kc-sve" id="uE1-VT-OrB"/>
+                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="YP7-hy-ImA"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="2R8-y8-p5O" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" constant="45" id="6QA-uL-67h"/>
                             <constraint firstItem="2R8-y8-p5O" firstAttribute="centerX" secondItem="QS5-Rx-YEW" secondAttribute="centerX" id="Fcg-lQ-fZJ"/>
+                            <constraint firstItem="8mV-js-PRS" firstAttribute="trailing" secondItem="O1u-W8-tvY" secondAttribute="trailing" id="UIP-5G-Z3N"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="2R8-y8-p5O" secondAttribute="trailing" constant="125" id="WtQ-Li-NGh"/>
+                            <constraint firstItem="8mV-js-PRS" firstAttribute="top" secondItem="2R8-y8-p5O" secondAttribute="bottom" constant="8" id="ZIK-od-n1t"/>
                             <constraint firstItem="2R8-y8-p5O" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="125" id="aTw-RW-eES"/>
+                            <constraint firstItem="8mV-js-PRS" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" id="bC3-xW-Pr9"/>
+                            <constraint firstItem="8mV-js-PRS" firstAttribute="bottom" secondItem="O1u-W8-tvY" secondAttribute="bottom" id="qxz-rP-m2g"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="more" id="cPa-gy-q4n">
                         <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="15"/>
                     </tabBarItem>
+                    <connections>
+                        <outlet property="table" destination="8mV-js-PRS" id="ahG-j2-f81"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
