--- a/Todos/Todos/Base.lproj/Main.storyboard
+++ b/Todos/Todos/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="todos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0GL-ct-poc">
-                                <rect key="frame" x="125" y="65" width="125" height="62"/>
+                                <rect key="frame" x="125" y="177" width="125" height="62"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="45"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -32,14 +32,17 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="9pv-A4-QxB" id="0x9-Qd-cAW"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxN-ZH-Lgu">
                                 <rect key="frame" x="15" y="359" width="345" height="55"/>
-                                <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.039215686274509803" green="0.62745098039215685" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="U4a-Cg-0ob"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="21"/>
                                 <state key="normal" title="add todo">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -47,28 +50,42 @@
                                     <action selector="addTodoButton:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Est-0l-BAW"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="todos" translatesAutoresizingMaskIntoConstraints="NO" id="U0l-4W-3Q7">
+                                <rect key="frame" x="123.5" y="100" width="128" height="69"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="AJi-Dw-ure"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="WkB-lE-NMp"/>
+                                    <constraint firstAttribute="height" constant="69" id="hgz-dr-ClH"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="69" id="vzg-QF-esn"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="U0l-4W-3Q7" secondAttribute="trailing" constant="123.5" id="5C5-OW-MQo"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="top" secondItem="g2Z-3p-z5g" secondAttribute="bottom" constant="8" id="8T5-o3-gNj"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="0GL-ct-poc" secondAttribute="trailing" constant="125" id="DQ4-A6-93J"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="Ngh-dh-37V"/>
+                            <constraint firstItem="U0l-4W-3Q7" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="123.5" id="Noz-V0-E3d"/>
                             <constraint firstItem="g2Z-3p-z5g" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="Q1D-gW-YJx"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="g2Z-3p-z5g" secondAttribute="trailing" constant="16" id="Qhf-lm-OPn"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="wxN-ZH-Lgu" secondAttribute="trailing" constant="16" id="RBH-v0-Tgp"/>
                             <constraint firstItem="0GL-ct-poc" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="125" id="TKd-pL-Apq"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="ZC2-PQ-0xk"/>
+                            <constraint firstItem="0GL-ct-poc" firstAttribute="top" secondItem="U0l-4W-3Q7" secondAttribute="bottom" constant="8" id="Zwr-GY-GKI"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="ady-lI-NzM"/>
                             <constraint firstItem="g2Z-3p-z5g" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="bSX-yo-9xT"/>
-                            <constraint firstItem="g2Z-3p-z5g" firstAttribute="top" secondItem="0GL-ct-poc" secondAttribute="bottom" constant="169" id="cYy-xx-DO6"/>
                             <constraint firstItem="g2Z-3p-z5g" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="d00-4v-RIC"/>
                             <constraint firstItem="g2Z-3p-z5g" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="16" id="eN8-yQ-sse"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="top" secondItem="g2Z-3p-z5g" secondAttribute="bottom" constant="8" id="eg8-Hd-jfx"/>
-                            <constraint firstItem="0GL-ct-poc" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="45" id="ezC-yj-5ls"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="wxN-ZH-Lgu" secondAttribute="trailing" constant="15" id="jFe-W7-jpk"/>
+                            <constraint firstItem="0GL-ct-poc" firstAttribute="top" secondItem="U0l-4W-3Q7" secondAttribute="bottom" constant="8" id="mds-3w-5ty"/>
                             <constraint firstItem="wxN-ZH-Lgu" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" constant="15" id="pZp-dT-fX9"/>
                             <constraint firstItem="0GL-ct-poc" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="qaB-kz-aTs"/>
                             <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="wxN-ZH-Lgu" secondAttribute="bottom" constant="204" id="qo5-Le-MN0"/>
+                            <constraint firstItem="U0l-4W-3Q7" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="xzn-oH-ciI"/>
+                            <constraint firstItem="U0l-4W-3Q7" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="zum-sf-WPD"/>
+                            <constraint firstItem="U0l-4W-3Q7" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" constant="80" id="zxU-78-oZ7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
@@ -159,4 +176,7 @@
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="todos" width="128" height="128"/>
+    </resources>
 </document>
