--- a/Todos/Todos/Base.lproj/Main.storyboard
+++ b/Todos/Todos/Base.lproj/Main.storyboard
@@ -54,12 +54,13 @@
                             </navigationBar>
                             <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="e.g. write some code" textAlignment="center" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="g2Z-3p-z5g">
                                 <rect key="frame" x="16" y="291" width="343" height="55"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="PBz-Aw-LEv"/>
                                     <constraint firstAttribute="height" constant="55" id="zBw-hk-JlK"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <outlet property="delegate" destination="9pv-A4-QxB" id="0x9-Qd-cAW"/>
                                 </connections>
